# haystack_lemmatize_node

./: LICENSE.md  README.md  pyproject.toml
src/haystack_lemmatize_node/: __init__.py
